[package]
name = "cli_2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "2048"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
phf = { version = "0.10", features = ["macros"] }
crossterm = "0.23.2"